# claude-certified-architect

./: .env.example  .gitignore  Anthropic ccaf.apkg  README.md  config.py  main.py  pyproject.toml
01_Agentic-Architecture_&_Orchestration/: gap.md  overview.md
01_Agentic-Architecture_&_Orchestration/01_agentic_loops/: doc.md  ring_1_single_tool.py  ring_2_agentic_loop.py  ring_3_multiple_tools.py  ring_4_error_handling.py  ring_5_tool_runner.py
01_Agentic-Architecture_&_Orchestration/02_multi_agent_orchestration/: doc.md  hub_and_spoke.py
01_Agentic-Architecture_&_Orchestration/03_subagent_invocation_context/: agent_sdk.md  coordinator.py  doc.md
01_Agentic-Architecture_&_Orchestration/04_workflow_enforcement_handoff/: doc.md  prerequisite_gate.py  structured_handoff.py
01_Agentic-Architecture_&_Orchestration/05_agent_sdk_hooks/: doc.md  hooks_exercise.py
01_Agentic-Architecture_&_Orchestration/06_task_decomposition/: doc.md
01_Agentic-Architecture_&_Orchestration/07_session_state_resumption/: doc.md
01_Agentic-Architecture_&_Orchestration/agent_sdk/: buggy_file.py  doc.md  simple_claude_code.py  test_utils.py  utils.py
02_Tool-Design_&_MCP-Integration/: overview.md
02_Tool-Design_&_MCP-Integration/01_tool_schema_design/: doc.md  misrouting_ab.py
02_Tool-Design_&_MCP-Integration/02_structured_error_responses/: doc.md  error_recovery_loop.py
02_Tool-Design_&_MCP-Integration/03_tool_distribution_choice/: constrained_url.py  doc.md  overload_vs_scoped.py  tool_choice_ab.py
02_Tool-Design_&_MCP-Integration/04_mcp_server_integration/: doc.md
(+1 files in other folders)
